--- a/src/app/admin-panel/admin-panel.component.html
+++ b/src/app/admin-panel/admin-panel.component.html
@@ -1,35 +1,11 @@
-<section>
-    <form class="post-form" (ngSubmit)=send(postForm) #postForm="ngForm">
+<div class="myContainer">
+  <div class="myNav">
+    <div routerLink="add" routerLinkActive="navactive">Add post</div>
+    <div routerLink="dunno" routerLinkActive="navactive">Dunno yet</div>
+    <div routerLink="logger" routerLinkActive="navactive">Logger</div>
+  </div>
+  <div class="myBody">
+    <router-outlet></router-outlet>
 
-      <mat-form-field color="accent">
-        <mat-label>Title</mat-label>
-        <input ngModel matInput placeholder="" maxlength="20" type="text" name="title" required>
-        <!-- <mat-icon matSuffix>assignment_ind</mat-icon> -->
-        <!-- <mat-error *ngIf="">error</mat-error> -->
-      </mat-form-field>
-      <br>
-      <mat-form-field color="accent" >
-        <mat-label>img</mat-label>
-        <input ngModel matInput placeholder="" type="text" name="img" required>
-        <!-- <mat-icon matSuffix>lock_open</mat-icon> -->
-        <!-- <mat-error *ngIf="">error</mat-error> -->
-        <!-- <mat-hint align="start"><strong>Don't disclose personal info</strong> </mat-hint>
-      <mat-hint align="end">{{message.value.length}} / 256</mat-hint> -->
-      </mat-form-field>
-      <br>
-
-      <mat-form-field color="accent" >
-          <mat-label>Text</mat-label>
-          <input ngModel matInput placeholder="" maxlength="20" type="text" name="text" required>
-          <!-- <mat-icon matSuffix>lock_open</mat-icon> -->
-          <!-- <mat-error *ngIf="">error</mat-error> -->
-          <!-- <mat-hint align="start"><strong>Don't disclose personal info</strong> </mat-hint>
-        <mat-hint align="end">{{message.value.length}} / 256</mat-hint> -->
-        </mat-form-field>
-      <div>
-        <button mat-raised-button type="submit" [disabled]="">Login</button>
-
-      </div>
-    </form>
-  </section>
-
+  </div>
+</div>
