--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,17 @@
-<section>
+<nav>
+  <app-nav></app-nav>
+</nav>
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+
+
+<!-- <section>
   <nav>
     <app-nav></app-nav>
   </nav>
   <main>
     <router-outlet></router-outlet>
   </main>
-</section>
+</section> -->
