--- a/src/app/blog/post/post.component.css
+++ b/src/app/blog/post/post.component.css
@@ -3,6 +3,13 @@
   padding: 50px;
 }
 
+.loading, .loadingError {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
 h1 {
   margin-bottom: 40px;
 }
