--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -1,3 +1,187 @@
-<p>
-  cv works!
-</p>
+<div class="cv-container">
+  <div class="cv-side-left">
+    <div class="img">
+      <img src="./../../assets/shande.jpg" alt="my picture">
+    </div>
+    <div class="personal-heading">
+      <mat-icon>face</mat-icon>
+      <h2>Personal information</h2>
+    </div>
+    <div class="personal-body">
+      <div>
+        <i class="fas fa-home"></i>
+        <p>ul. Tadeusza Zielińskiego 62/32</p>
+        <p>53-534 Wrocław</p>
+      </div>
+      <div>
+        <i class="fab fa-github"></i>
+        <p>
+          <a href="https://github.com/marcincyboran" target="_blank">GihHub profile</a>
+        </p>
+      </div>
+      <div>
+        <i class="fas fa-phone"></i>
+        <p>606-281-274</p>
+        <p>
+          <a href="mailto:marcin.cyboran.wsb@gmail.com" target="_blank">marcin.cyboran.wsb@gmail.com</a>
+        </p>
+      </div>
+    </div>
+    <div class="experience-heading">
+      <mat-icon>assignment</mat-icon>
+      <h2>Experience</h2>
+    </div>
+    <div class="experience-body">
+      <div>
+        <p>
+          <em>12.2015 – 01.2017</em>
+        </p>
+        <p>
+          <strong>Bogatyńskie Wodociągi i Oczyszczalnia S.A</strong>
+        </p>
+        <p>Laborant</p>
+        <p class="details">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates, temporibus!</p>
+      </div>
+      <div>
+        <p>
+          <em>01.2014 – obecnie</em>
+        </p>
+        <p>
+          <strong>Samozatrudnienie</strong>
+        </p>
+        <p class="details">Sprzedaż detaliczna prowadzona przez domy sprzedaży wysyłkowej lub Internet</p>
+      </div>
+      <div>
+        <p>
+          <em>09.2012 – 10.2012</em>
+        </p>
+        <p>
+          <strong>Herbapol S.A. Wrocławskie Zakłady Zielarskie</strong>
+        </p>
+        <p>Praktykant</p>
+        <p class="details">Praktyki studenckie w Laboratorium Kontroli Jakości - laboratorium mikrobiologiczne
+        </p>
+      </div>
+    </div>
+    <div class="personality-heading">
+      <mat-icon>whatshot</mat-icon>
+      <h2>Personality</h2>
+    </div>
+    <div class="personality-body">
+      <p>Otwarty</p>
+      <p>Punktualny</p>
+      <p>Dokładny</p>
+      <p>Samodzielny</p>
+      <p>Dobrze zorganizowany</p>
+      <p>Elastyczny</p>
+    </div>
+    <div class="software-heading">
+      <mat-icon>code</mat-icon>
+      <h2>Software skills</h2>
+    </div>
+    <div class="software-body">
+      <div>
+        <p>HTML 5</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+      <div>
+        <p>CSS 3</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+      <div>
+        <p>SASS</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+      <div>
+        <p>RWD</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+      <div>
+        <p>Bootstrap</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+      <div>
+        <p>JavaScript</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+      <div>
+        <p>AngularJS</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+      <div>
+        <p>Angular 2+</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+      <div>
+        <p>jQuery</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+      <div>
+        <p>Gulp/Webpack</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+      <div>
+        <p>GIT</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+    </div>
+  </div>
+  <div class="cv-side-right">
+    2
+  </div>
+</div>
