--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,14 +10,15 @@
     <div class="list-wrapper">
       <h2>Wykorzystane technologie:</h2>
       <ul>
-        <li><img src="./../../assets/html.png" alt="HTML5"></li>
-        <li><img src="./../../assets/css3.png" alt="CSS#"></li>
-        <li><img src="./../../assets/js.png" alt="JAVASCRIPT"></li>
-        <li><img src="./../../assets/npm.png" alt="NPM"></li>
-        <li><img src="./../../assets/angular.png" alt="ANGULAR2++"></li>
-        <li><img src="./../../assets/ts.png" alt="TYPESCRIPT"></li>
-        <li><img src="./../../assets/maps.png" alt="TYPESCRIPT"></li>
-        <li><img src="./../../assets/fb.png" alt="FIREBASE"></li>
+        <li><img src="./../../assets/html.png" alt="html5 logo"></li>
+        <li><img src="./../../assets/css3.png" alt="css3 logo"></li>
+        <li><img src="./../../assets/js.png" alt="javascript logo"></li>
+        <li><img src="./../../assets/npm.png" alt="npm logo"></li>
+        <li><img src="./../../assets/angular.png" alt="angular2  logo"></li>
+        <li><img src="./../../assets/ts.png" alt="typescript logo"></li>
+        <li><img src="./../../assets/maps.png" alt="googlemaps logo"></li>
+        <li><img src="./../../assets/fb.png" alt="firebase logo"></li>
+        <li><img src="./../../assets/mongolab.png" alt="mongolab logo"></li>
       </ul>
     </div>
   </div>
