--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,13 +1,16 @@
 <div class="con">
+
   <div class="logo" routerLink="/login">
-    <img src="./../../assets/shande.jpg" alt="Marcin Cyboran portfolio"></div>
+    <img src="./../../assets/shande.jpg" alt="Marcin Cyboran portfolio">
+  </div>
+
   <div class="navigation hidden" #menu>
 
     <div routerLink="/home" data-name="HOME" routerLinkActive="navactive">
       <mat-icon>supervised_user_circle</mat-icon>
     </div>
 
-    <div routerLink="/portfolio" data-name="WORK" routerLinkActive="navactive">
+    <div routerLink="/portfolio" data-name="WORKS" routerLinkActive="navactive">
       <mat-icon class="material-icons md-36">web</mat-icon>
     </div>
 
@@ -27,16 +30,12 @@
       <mat-icon>mail_outline</mat-icon>
     </div>
 
-    <div data-name="LOGOUT" *ngIf="auth.user" (click)="logout()" class="logged">
-      <mat-icon>exit_to_app</mat-icon>
-    </div>
-
-    <div data-name="PANEL" *ngIf="auth.user" (click)="adminPanel()" routerLinkActive="navactive" class="logged">
+    <div data-name="PANEL" *ngIf="auth.user" routerLink="/admin" routerLinkActive="navactive" class="logged">
       <mat-icon>edit</mat-icon>
     </div>
 
-    <div class="phone" (click)="showMenuPhone(menu)">
-      <mat-icon>menu</mat-icon>
+    <div data-name="LOGOUT" *ngIf="auth.user" (click)="logout()" class="logged">
+      <mat-icon>exit_to_app</mat-icon>
     </div>
 
   </div>
@@ -52,4 +51,8 @@
     </div>
 
   </div>
+  <div class="phone" (click)="showMenuPhone(menu)">
+      <mat-icon>menu</mat-icon>
+    </div>
 </div>
+
