--- a/src/app/cv/cv.component.html
+++ b/src/app/cv/cv.component.html
@@ -3,11 +3,11 @@
     <div class="img">
       <img src="./../../assets/shande.jpg" alt="my picture">
     </div>
-    <div class="personal-heading">
+    <div class="heading">
       <mat-icon>face</mat-icon>
       <h2>Personal information</h2>
     </div>
-    <div class="personal-body">
+    <div class="personal-body body">
       <div>
         <i class="fas fa-home"></i>
         <p>ul. Tadeusza Zielińskiego 62/32</p>
@@ -27,11 +27,11 @@
         </p>
       </div>
     </div>
-    <div class="experience-heading">
+    <div class="heading">
       <mat-icon>assignment</mat-icon>
       <h2>Experience</h2>
     </div>
-    <div class="experience-body">
+    <div class="experience-body body">
       <div>
         <p>
           <em>12.2015 – 01.2017</em>
@@ -63,11 +63,11 @@
         </p>
       </div>
     </div>
-    <div class="personality-heading">
+    <div class="heading">
       <mat-icon>whatshot</mat-icon>
       <h2>Personality</h2>
     </div>
-    <div class="personality-body">
+    <div class="personality-body body">
       <p>Otwarty</p>
       <p>Punktualny</p>
       <p>Dokładny</p>
@@ -75,11 +75,105 @@
       <p>Dobrze zorganizowany</p>
       <p>Elastyczny</p>
     </div>
-    <div class="software-heading">
+    <div class="heading">
+      <mat-icon>notifications</mat-icon>
+      <h2>Po godzinach</h2>
+    </div>
+    <div class="hobbies-body body">
+      <i class="fas fa-code"></i>
+      <i class="fas fa-coffee"></i>
+      <i class="fas fa-film"></i>
+      <i class="fas fa-gamepad"></i>
+      <i class="fas fa-headphones"></i>
+      <i class="fas fa-book"></i>
+    </div>
+  </div>
+  <div class="cv-side-right">
+    <div class="heading-name">
+      <h2>Marcin Cyboran</h2>
+    </div>
+    <div class="heading-profile">
+      <h2>Profil</h2>
+    </div>
+    <div class="profile-body body">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur rerum architecto distinctio tempora, tempore deleniti
+        dolore atque et tenetur excepturi!</p>
+    </div>
+    <div class="heading">
+      <mat-icon>school</mat-icon>
+      <h2>Wykształcenie</h2>
+    </div>
+    <div class="education-body body">
+      <div>
+        <p>
+          <em>10.2017 – 06.2018</em>
+        </p>
+        <p>
+          <strong>Wyższa Szkoła Bankowa we Wrocławiu</strong>
+        </p>
+        <p>Programista front-end z AngularJS <a href="www.wsb.pl/wroclaw/studenci/studia-podyplomowe/kierunki/programista-front-end-z-angular-js">- program kierunku</a></p>
+      </div>
+      <div>
+        <p>
+          <em>10.2013 – 07.2015</em>
+        </p>
+        <p>
+          <strong>Uniwersytet Przyrodniczy we Wrocławiu</strong>
+        </p>
+        <p>Techniki laboratoryjne w biologii</p>
+      </div>
+      <div>
+        <p>
+          <em>10.2010 – 07.2013</em>
+        </p>
+        <p>
+          <strong>Uniwersytet Przyrodniczy we Wrocławiu</strong>
+        </p>
+        <p>Biologia</p>
+      </div>
+    </div>
+    <div class="heading">
+      <mat-icon>cloud_done</mat-icon>
+      <h2>Umiejętności</h2>
+    </div>
+    <div class="skills-body body">
+      <p>Bardzo dobra znajomość i obsługa komputera</p>
+      <p>Znajomość środowiska <strong>MS Office</strong></p>
+      <p>Znajomość oprogramowania <strong>Adobe Photoshop</strong></p>
+      <p>Znajomość oprogramowania <strong>Sklepicom</strong> od nazwa.pl</p>
+      <p>Doświadczenie w pracy normą <strong>ISO 9001:2008</strong></p>
+      <p>Podstawowa znajomość środowiska <strong>Linux</strong></p>
+      <p>Prawo jazdy <strong>kat. B</strong></p>
+    </div>
+    <div class="heading">
+      <mat-icon>language</mat-icon>
+      <h2>Języki obce</h2>
+    </div>
+    <div class="languages-body body">
+      <div>
+        <p>Angielski</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+      <div>
+        <p>Japoński</p>
+        <i class="fas fa-circle"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+        <i class="fas fa-circle semi-transparent"></i>
+      </div>
+    </div>
+    <div class="heading">
       <mat-icon>code</mat-icon>
       <h2>Software skills</h2>
     </div>
-    <div class="software-body">
+    <div class="software-body body">
       <div>
         <p>HTML 5</p>
         <i class="fas fa-circle"></i>
@@ -181,7 +275,3 @@
       </div>
     </div>
   </div>
-  <div class="cv-side-right">
-    2
-  </div>
-</div>
